# ewald-allegro

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  analyze.py  install.sh  install_deps.sh  prepare_data.py  pyproject.toml  test_model_forward.py  train.py
.github/workflows/: release.yaml  tests.yaml
allegro/: __init__.py  _version.py
allegro/model/: __init__.py  allegro_models.py  ewald_allegro_v2.py
allegro/nn/: _allegro.py  _edgeembed.py  edgewise.py  scalarembed.py
allegro/nn/_strided/: _channels.py  _contract.py  _cueq_contracter.py  _flashallegro.py
allegro/utils/: __init__.py  autotune_triton.py
configs/: tutorial.yaml
docs/: conf.py  index.rst  quickstart.md  requirements.txt  theory.md
docs/_static/: custom.css
docs/guide/: accelerations.rst  cuequivariance.md  guide.rst
ewald/: __init__.py  cell_list.py  charge_predictor.py  ewald_sum.py  ewald_sum_optimized.py
examples/water/: example.xyz  run.sh
tests/: test_basic.py
tests/model/: test_allegro.py
tests/nn/: test_contract_basic.py  test_contract_kernels.py
