[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ewald-allegro"
version = "0.1.0"
description = "Ewald long-range electrostatic interactions for Allegro equivariant neural network potentials"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "YiYuan Tao"},
]
dependencies = [
    "torch>=2.0",
    "e3nn>=0.5",
    "nequip>=0.17",
    "nequip-allegro>=0.4",
    "ase>=3.22",
    "scipy>=1.7",
    "numpy>=1.21",
    "matplotlib>=3.5",
]

[project.urls]
Repository = "https://github.com/xiaokang126/ewald-allegro"
